--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,7 +31,8 @@ filetime = "0.2"
 tauri-plugin-dialog = "2"
 log = "0.4"
 tauri-plugin-log = "2"
-md5 = "0.7.0"
-crc32fast = "1.4.2"
-sha1 = "0.10.6"
-sha2 = "0.10.8"
+md5 = "0.7"
+crc32fast = "1.4"
+sha1 = "0.10"
+sha2 = "0.10"
+hex = "0.4"
