--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/randomcolor": "^0.5.9",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
+    "react-contexify": "^6.0.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
