--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@fluentui/react-components": "^9.56.3",
     "@fluentui/react-icons": "^2.0.266",
     "@fluentui/react-list-preview": "^0.4.1",
@@ -20,7 +22,6 @@
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-contexify": "^6.0.0",
-    "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
