--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,7 +26,7 @@ serde_json = "1"
 uuid = { version = "1.11", features = ["serde", "v4"] }
 hashbrown = { version = "0.15", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
-thiserror = "2.0.3"
+thiserror = "2"
 filetime = "0.2"
 tauri-plugin-dialog = "2"
 log = "0.4"
@@ -38,4 +38,4 @@ sha2 = "0.10"
 hex = "0.4"
 pathdiff = "0.2"
 reqwest = "0.12"
-futures-lite = "2"
+futures = "0.3"
