--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@tauri-apps/plugin-fs": "~2.0.2",
     "@tauri-apps/plugin-log": "~2.0.0",
     "@types/randomcolor": "^0.5.9",
+    "i18next": "^24.0.5",
+    "i18next-http-backend": "^3.0.1",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-contexify": "^6.0.0",
@@ -26,6 +28,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
     "react-hotkeys": "^2.0.0",
+    "react-i18next": "^15.1.3",
     "react-router-dom": "^7.0.1",
     "react-selecto": "^1.26.3",
     "tailwindcss": "^3.4.15",
