--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tauri-apps/plugin-log": "~2.0.0",
     "@types/randomcolor": "^0.5.9",
     "i18next": "^24.0.5",
+    "i18next-browser-languagedetector": "^8.0.1",
     "i18next-http-backend": "^3.0.1",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
