--- a/src-tauri/resources/default_settings.json
+++ b/src-tauri/resources/default_settings.json
@@ -14,6 +14,23 @@
             ]
         }
     },
+    "keyMapping": {
+        "save": [
+            "ctrl",
+            "s"
+        ],
+        "rename": [
+            "f2"
+        ],
+        "delete": [
+            "delete"
+        ],
+        "newFolder": [
+            "ctrl",
+            "shift",
+            "n"
+        ]
+    },
     "experimental": {
         "aigcDetect": false
     }
