--- a/src-tauri/resources/default_settings.json
+++ b/src-tauri/resources/default_settings.json
@@ -23,7 +23,7 @@
             "f2"
         ],
         "delete": [
-            "delete"
+            "del"
         ],
         "newFolder": [
             "ctrl",
