--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,7 +25,7 @@ tauri-plugin-dialog = "2"
 log = "0.4"
 tauri-plugin-log = "2"
 md5 = "0.7"
-crc32fast = "1.4"
+crc32fast = "1"
 sha1 = "0.10"
 sha2 = "0.10"
 hex = "0.4"
@@ -33,3 +33,4 @@ pathdiff = "0.2"
 reqwest = "0.12"
 futures = "0.3"
 imagesize = "0.13"
+infer = "0.16"
