--- a/src-tauri/resources/default_settings.json
+++ b/src-tauri/resources/default_settings.json
@@ -14,6 +14,9 @@
             ]
         }
     },
+    "library": {
+        "export": null
+    },
     "keyMapping": {
         "save": [
             "ctrl",
