feat: Semi-transparent window.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = ["protocol-asset"] }
+tauri = { version = "2", features = [ "macos-private-api", "protocol-asset"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 uuid = { version = "1.11", features = ["serde", "v4"] }
@@ -32,3 +32,4 @@ reqwest = "0.12"
 futures = "0.3"
 imagesize = "0.13"
 infer = "0.16"
+window-vibrancy = "0.5"
