--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,3 +33,4 @@ futures = "0.3"
 imagesize = "0.13"
 window-vibrancy = "0.5"
 file-format = { version = "0.26", features = ["reader"] }
+opener = "0.7"
