--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@fluentui/react-components": "^9.56.3",
     "@fluentui/react-icons": "^2.0.266",
     "@fluentui/react-list-preview": "^0.4.1",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "@tauri-apps/plugin-dialog": "~2.0.1",
     "@tauri-apps/plugin-log": "~2.0.0",
     "@types/randomcolor": "^0.5.9",
+    "@types/three": "^0.171.0",
     "i18next": "^24.0.5",
     "i18next-http-backend": "^3.0.1",
     "randomcolor": "^0.6.2",
@@ -30,6 +33,7 @@
     "react-router-dom": "^7.0.1",
     "react-selecto": "^1.26.3",
     "tailwindcss": "^3.4.15",
+    "three": "^0.171.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
