--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,3 +35,17 @@ window-vibrancy = "0.5"
 file-format = { version = "0.26", features = ["reader"] }
 opener = "0.7"
 svg = "0.18"
+gltf = { version = "1.4", features = [
+    "KHR_lights_punctual",
+    "KHR_materials_pbrSpecularGlossiness",
+    "KHR_materials_unlit",
+    "KHR_texture_transform",
+    "KHR_materials_transmission",
+    "KHR_materials_ior",
+    "KHR_materials_variants",
+    "KHR_materials_volume",
+    "KHR_materials_specular",
+    "KHR_materials_emissive_strength",
+] }
+glam = "0.29"
+base64 = "0.22"
