feat: Double click behavior

--- a/src-tauri/resources/settings_default.json
+++ b/src-tauri/resources/settings_default.json
@@ -12,6 +12,13 @@
                 "zh",
                 "en"
             ]
+        },
+        "dbClick": {
+            "default": "open",
+            "candidates": [
+                "open",
+                "ref"
+            ]
         }
     },
     "keyMapping": {
