feat: Restricting model rendering framerate.

--- a/src-tauri/resources/settings_default.json
+++ b/src-tauri/resources/settings_default.json
@@ -21,6 +21,9 @@
             ]
         }
     },
+    "modelRendering": {
+        "fps": 60
+    },
     "keyMapping": {
         "save": [
             "ctrl",
