--- a/package.json
+++ b/package.json
@@ -20,11 +20,9 @@
     "@tauri-apps/plugin-dialog": "~2.0.1",
     "@tauri-apps/plugin-log": "~2.0.0",
     "@tauri-apps/plugin-shell": "~2.2.0",
-    "@types/randomcolor": "^0.5.9",
     "@types/three": "^0.171.0",
     "i18next": "^24.0.5",
     "i18next-http-backend": "^3.0.1",
-    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-contexify": "^6.0.0",
     "react-dom": "^18.2.0",
@@ -34,8 +32,7 @@
     "react-router-dom": "^7.0.1",
     "react-selecto": "^1.26.3",
     "tailwindcss": "^3.4.15",
-    "three": "^0.171.0",
-    "uuid": "^11.0.3"
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
