feat: Tag grouping.

--- a/src-tauri/resources/settings_default.json
+++ b/src-tauri/resources/settings_default.json
@@ -19,6 +19,13 @@
                 "open",
                 "ref"
             ]
+        },
+        "tagGroupConflictResolve": {
+            "default": "remove",
+            "candidates": [
+                "override",
+                "remove"
+            ]
         }
     },
     "modelRendering": {
