--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -50,6 +50,6 @@ gltf = { version = "1.4", features = [
 glam = "0.29"
 base64 = "0.22"
 bytemuck = "1"
-tauri-plugin-shell = "2"
 rand = "0.8"
 crash-handler = "0.6"
+tauri-plugin-opener = "2.2.2"
