feat: Changing transparency color.

--- a/src-tauri/resources/settings_default.json
+++ b/src-tauri/resources/settings_default.json
@@ -36,9 +36,16 @@
                 "blur",
                 "acrylic",
                 "mica",
+                "tabbed",
                 "vibrancy"
             ]
-        }
+        },
+        "transparencyColor": [
+            20,
+            20,
+            20,
+            20
+        ]
     },
     "modelRendering": {
         "fps": 60
