feat: Resizable panels with constraints.

--- a/src-tauri/resources/settings_default.json
+++ b/src-tauri/resources/settings_default.json
@@ -20,7 +20,9 @@
                 "override",
                 "remove"
             ]
-        }
+        },
+        "leftPanelWidth": 180,
+        "rightPanelWidth": 180
     },
     "appearance": {
         "theme": {
