feat: Hide conflict tags.

--- a/src-tauri/resources/settings_default.json
+++ b/src-tauri/resources/settings_default.json
@@ -21,6 +21,7 @@
                 "remove"
             ]
         },
+        "hideConflictTagsWhenPickingNewTags": true,
         "leftPanelWidth": 180,
         "rightPanelWidth": 180
     },
