feat: Basic global searcher.

--- a/src-tauri/resources/settings_default.json
+++ b/src-tauri/resources/settings_default.json
@@ -64,10 +64,9 @@
         "delete": [
             "del"
         ],
-        "newFolder": [
+        "globalSearch": [
             "ctrl",
-            "shift",
-            "n"
+            "p"
         ]
     },
     "experimental": {
