--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "2", features = [] }
 tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-uuid = { version = "1.11", features = ["serde", "v4"] }
+uuid = { version = "1", features = ["serde", "v4"] }
 hashbrown = { version = "0.15", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "2"
@@ -35,7 +35,7 @@ window-vibrancy = "0.5"
 file-format = { version = "0.26", features = ["reader"] }
 opener = "0.7"
 svg = "0.18"
-gltf = { version = "1.4", features = [
+gltf = { version = "1", features = [
     "KHR_lights_punctual",
     "KHR_materials_pbrSpecularGlossiness",
     "KHR_materials_unlit",
@@ -51,5 +51,6 @@ glam = "0.29"
 base64 = "0.22"
 bytemuck = "1"
 rand = "0.8"
-crash-handler = "0.6"
-tauri-plugin-opener = "2.2.2"
+tauri-plugin-opener = "2"
+# Follow with tauri
+webview2-com = "0.33"
